

  Other enhancements:
  - Belarusian UI updated to 1.7.+

  Bug fixes:
  
  - HTML filter loses html-encoded characters if not supported
  http://sourceforge.net/support/tracker.php?aid=1802000

----------------------------------------------------------------------
 OmegaT 1.7.3 update 1 Changes
----------------------------------------------------------------------

1.7.3 update 1 vs. 1.7.3


  0 Enhancement
  2 Bugfixes

----------------------------------------------------------------------
1.7.3 update 1

  Bug fixes:

  - HTML entities not resolved in the XHTML filter 
  http://sourceforge.net/support/tracker.php?aid=1844968 

  - Prevent non-XML characters from entering the TMX 
  http://sourceforge.net/support/tracker.php?aid=1684825 

----------------------------------------------------------------------
 OmegaT 1.7.3 Changes
----------------------------------------------------------------------

1.7.3 vs. 1.7.2


  4 Enhancements
  3 Bugfixes

----------------------------------------------------------------------
1.7.3


Contains two new localisations (Danish and Polish) and bug fixes

 Other enhancements:
 
 - Danish 1.6.2 localisation + instant start
 - Polish 1.6.2 localisation + partial manual
 - Catalan localisation updated to 1.7.2
 - Belarusian UI updated to 1.7.+

 Bug fixes:
  
  - Properties: space before "=" shouldn't be part of the key  
  http://sourceforge.net/support/tracker.php?aid=1812183

  - <context> should be ignored in XLIFF files  
  http://sourceforge.net/support/tracker.php?aid=1802000

  - Footnotes break segments in OOo 1.x documents  
  http://sourceforge.net/support/tracker.php?aid=1812385

----------------------------------------------------------------------
 OmegaT 1.7.2 Changes
----------------------------------------------------------------------

1.7.2 vs. 1.7.1


  11 Enhancements
   7 Bugfixes

----------------------------------------------------------------------
1.7.2

